--- a/react_app/assets/index.html
+++ b/react_app/assets/index.html
@@ -193,39 +193,6 @@
 
             </ul>
         </div-->
-
-        <!--div>
-            <div className="s-bar">推荐
-                <a className="am-badge am-badge-danger am-round">小清新</a>
-                <a className="am-badge am-badge-danger am-round">文艺范</a>
-                <a className="i-load-more-item-shadow" href="#">
-                    <i className="am-icon-refresh am-icon-fw">ll</i>换一组</a>
-            </div>
-
-            <div className="s-content" style="border-top: 1px solid #E8EEF2;">
-                <ul data-am-widget="gallery" className="am-gallery am-avg-sm-2 am-avg-lg-4 am-avg-md-3 am-gallery-default">
-                    <li style="float: left; width: 25%">
-                        <div className="am-gallery-item am_list_block">
-                            <a href="###" className="am_img_bg">
-                                <img src="/static/assets/i/01.jpg"/>
-                            </a>
-
-                            <div className="am_listimg_info">
-                                <span className="am-icon-heart"> 132</span>
-                                <span className="am-icon-comments"> 67</span>
-                                <span className="am_imglist_time">15分钟前</span>
-                            </div>
-                        </div>
-                        <a className="am_imglist_user">
-                                <span className="am_imglist_user_ico">
-                                    <img src="/static/assets/i/kj.png" alt=""/>
-                                </span>
-                            <span className="am_imglist_user_font">路见不平Eason吼</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div-->
     </div>
 
     <div class="you-like" style="width: 23%; float: right;">
@@ -279,8 +246,8 @@
         </div>
     </div>
 
-    <div class="you-like">
-        <div class="s-bar">推荐
+    <div class="you-like" id="root2">
+        <!--div class="s-bar">推荐
             <a class="am-badge am-badge-danger am-round">民谣</a>
             <a class="am-badge am-badge-danger am-round">摇滚</a>
             <a class="i-load-more-item-shadow" href="#"><i class="am-icon-refresh am-icon-fw"></i>换一组</a>
@@ -302,113 +269,8 @@
                                                                                       alt=""></span><span
                             class="am_imglist_user_font">路见不平Eason吼</span></a>
                 </li>
-
-                <li style="float: left; width: 25%">
-                    <div class="am-gallery-item am_list_block">
-                        <a href="###" class="am_img_bg">
-                            <img src="/static/assets/i/01.jpg"/>
-                        </a>
-
-                        <div class="am_listimg_info"><span class="am-icon-heart"> 132</span><span
-                                class="am-icon-comments"> 67</span><span class="am_imglist_time">15分钟前</span></div>
-
-                    </div>
-                    <a class="am_imglist_user"><span class="am_imglist_user_ico"><img src="/static/assets/i/kj.png"
-                                                                                      alt=""></span><span
-                            class="am_imglist_user_font">路见不平Eason吼</span></a>
-                </li>
-
-                <li style="float: left; width: 25%">
-                    <div class="am-gallery-item am_list_block">
-                        <a href="###" class="am_img_bg">
-                            <img src="/static/assets/i/01.jpg"/>
-                        </a>
-
-                        <div class="am_listimg_info"><span class="am-icon-heart"> 132</span><span
-                                class="am-icon-comments"> 67</span><span class="am_imglist_time">15分钟前</span></div>
-
-                    </div>
-                    <a class="am_imglist_user"><span class="am_imglist_user_ico"><img src="/static/assets/i/kj.png"
-                                                                                      alt=""></span><span
-                            class="am_imglist_user_font">路见不平Eason吼</span></a>
-                </li>
-
-                <li style="float: left; width: 25%">
-                    <div class="am-gallery-item am_list_block">
-                        <a href="###" class="am_img_bg">
-                            <img src="/static/assets/i/01.jpg"/>
-                        </a>
-
-                        <div class="am_listimg_info"><span class="am-icon-heart"> 132</span><span
-                                class="am-icon-comments"> 67</span><span class="am_imglist_time">15分钟前</span></div>
-
-                    </div>
-                    <a class="am_imglist_user"><span class="am_imglist_user_ico"><img src="/static/assets/i/kj.png"
-                                                                                      alt=""></span><span
-                            class="am_imglist_user_font">路见不平Eason吼</span></a>
-                </li>
-
-                <li style="float: left; width: 25%">
-                    <div class="am-gallery-item am_list_block">
-                        <a href="###" class="am_img_bg">
-                            <img src="/static/assets/i/01.jpg"/>
-                        </a>
-
-                        <div class="am_listimg_info"><span class="am-icon-heart"> 132</span><span
-                                class="am-icon-comments"> 67</span><span class="am_imglist_time">15分钟前</span></div>
-
-                    </div>
-                    <a class="am_imglist_user"><span class="am_imglist_user_ico"><img src="/static/assets/i/kj.png"
-                                                                                      alt=""></span><span
-                            class="am_imglist_user_font">路见不平Eason吼</span></a>
-                </li>
-
-                <li style="float: left; width: 25%">
-                    <div class="am-gallery-item am_list_block">
-                        <a href="###" class="am_img_bg">
-                            <img src="/static/assets/i/01.jpg"/>
-                        </a>
-
-                        <div class="am_listimg_info"><span class="am-icon-heart"> 132</span><span
-                                class="am-icon-comments"> 67</span><span class="am_imglist_time">15分钟前</span></div>
-
-                    </div>
-                    <a class="am_imglist_user"><span class="am_imglist_user_ico"><img src="/static/assets/i/kj.png"
-                                                                                      alt=""></span><span
-                            class="am_imglist_user_font">路见不平Eason吼</span></a>
-                </li>
-
-                <li style="float: left; width: 25%">
-                    <div class="am-gallery-item am_list_block">
-                        <a href="###" class="am_img_bg">
-                            <img src="/static/assets/i/01.jpg"/>
-                        </a>
-
-                        <div class="am_listimg_info"><span class="am-icon-heart"> 132</span><span
-                                class="am-icon-comments"> 67</span><span class="am_imglist_time">15分钟前</span></div>
-
-                    </div>
-                    <a class="am_imglist_user"><span class="am_imglist_user_ico"><img src="/static/assets/i/kj.png"
-                                                                                      alt=""></span><span
-                            class="am_imglist_user_font">路见不平Eason吼</span></a>
-                </li>
-
-                <li style="float: left; width: 25%">
-                    <div class="am-gallery-item am_list_block">
-                        <a href="###" class="am_img_bg">
-                            <img src="/static/assets/i/01.jpg"/>
-                        </a>
-
-                        <div class="am_listimg_info"><span class="am-icon-heart"> 132</span><span
-                                class="am-icon-comments"> 67</span><span class="am_imglist_time">15分钟前</span></div>
-
-                    </div>
-                    <a class="am_imglist_user"><span class="am_imglist_user_ico"><img src="/static/assets/i/kj.png"
-                                                                                      alt=""></span><span
-                            class="am_imglist_user_font">路见不平Eason吼</span></a>
-                </li>
             </ul>
-        </div>
+        </div-->
     </div>
 </div>
 
