add booklist of friends

--- a/react_app/assets/friends.html
+++ b/react_app/assets/friends.html
@@ -11,8 +11,15 @@
 </head>
 
 <body>
-
-<div id="root">aaa</div>
+<div>
+<ul class="am-nav am-nav-pills am-topbar-nav">
+    <li class="am-active"><a href="/recommend">推荐</a></li>
+    <li><a href="/explore">发现</a></li>
+    <li><a href="/mine">我的</a></li>
+    <li><a href="/friends">朋友</a></li>
+</ul>
+</div>
+<div id="root"></div>
 
 </body>
 
