add userlist to index

--- a/react_app/assets/index.html
+++ b/react_app/assets/index.html
@@ -195,7 +195,7 @@
         </div-->
     </div>
 
-    <div class="you-like" style="width: 23%; float: right;">
+    <div class="you-like" style="width: 23%; float: right;" id="root3"><!--
         <div class="s-bar">热门用户
             <a class="i-load-more-item-shadow" href="#"><i class="am-icon-refresh am-icon-fw"></i>更多</a>
         </div>
@@ -243,7 +243,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 
     <div class="you-like" id="root2">
