add homepage for user

--- a/react_app/assets/index.html
+++ b/react_app/assets/index.html
@@ -136,9 +136,9 @@
                         <span class="tpl-header-list-user-ico"> <img src="/static/assets/i/user.png"></span>
                     </a>
                     <ul class="am-dropdown-content">
-                        <li><a href="#"><span class="am-icon-bell"></span> 资料</a></li>
-                        <li><a href="#"><span class="am-icon-cog"></span> 设置</a></li>
-                        <li><a href="#"><span class="am-icon-power-off"></span> 退出</a></li>
+                        <li><a href="/user/"><span class="am-icon-bell"></span> 个人主页</a></li>
+                        <li><a href="/settings"><span class="am-icon-cog"></span> 设置</a></li>
+                        <li><a href="/logout"><span class="am-icon-power-off"></span> 退出</a></li>
                     </ul>
                 </li>
 
