--- a/react_app/assets/explore.html
+++ b/react_app/assets/explore.html
@@ -104,12 +104,11 @@
 
                 <div class="am-panel-bd am-collapse am-in am-cf" id="collapse-panel-3">
                     <ul class="am-comments-list admin-content-comment">
-                        <div id="root"></div>
                         <!--li class="am-comment">
                             <a href="#"><img src="http://s.amazeui.org/media/i/demos/bw-2014-06-19.jpg?imageView/1/w/96/h/96" alt="" class="am-comment-avatar" width="48" height="48"></a>
                             <div class="am-comment-main">
                                 <header class="am-comment-hd">
-                                    <div class="am-comment-meta"><a href="#" class="am-comment-author">某人</a> 评论于 <time>2014-7-12 15:30</time></div>
+                                    <div class="am-comment-meta"><a href="#" class="am-comment-author">某人</a> 评论<a href="#" class="am-comment-author"> 书单</a>于 <time>2014-7-12 15:30</time></div>
                                 </header>
                                 <div class="am-comment-bd"><p>东临碣石以观沧海水何澹澹山岛崧峙树木丛生百草风茂秋风萧瑟洪波涌起日月之行若出其中星汉灿烂若出其里幸甚至哉歌以咏志</p>
                                 </div>
