--- a/react_app/assets/explore.html
+++ b/react_app/assets/explore.html
@@ -104,6 +104,7 @@
 
                 <div class="am-panel-bd am-collapse am-in am-cf" id="collapse-panel-3">
                     <ul class="am-comments-list admin-content-comment">
+                        <div id="root"></div>
                         <!--li class="am-comment">
                             <a href="#"><img src="http://s.amazeui.org/media/i/demos/bw-2014-06-19.jpg?imageView/1/w/96/h/96" alt="" class="am-comment-avatar" width="48" height="48"></a>
                             <div class="am-comment-main">
