--- a/react_app/assets/explore.html
+++ b/react_app/assets/explore.html
@@ -36,8 +36,8 @@
 
         <div class="am-collapse am-topbar-collapse" id="collapse-head">
             <ul class="am-nav am-nav-pills am-topbar-nav">
-                <li class="am-active"><a href="#">推荐</a></li>
-                <li><a href="/explore">发现</a></li>
+                <li ><a href="/index">推荐</a></li>
+                <li class="am-active"><a href="/explore">发现</a></li>
                 <li><a href="/mine">我的</a></li>
                 <li><a href="/friends">朋友</a></li>
             </ul>
