--- a/react_app/assets/search.html
+++ b/react_app/assets/search.html
@@ -10,11 +10,14 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
+    <link rel="stylesheet" href="/static/react/css/index.css">
     <link rel="stylesheet" href="/static/react/css/search.css">
     <script src="/static/react/js/vendor.js"></script>
     <script src="/static/react/js/index.js"></script>
     <script>require('search/initialize');</script>
     <link rel="alternate icon" type="image/png" href="assets/i/favicon.png">
+
+    <div id="header"></div>
 
     <style>
         .footer p {
