--- a/react_app/assets/settings.html
+++ b/react_app/assets/settings.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Mine</title>
-  <link rel="stylesheet" href="/static/react/css/settings.css">
-  <script src="/static/react/js/vendor.js"></script>
-  <script src="/static/react/js/settings.js"></script>
-  <script>require('settings/initialize');</script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Mine</title>
+    <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
+    <link rel="stylesheet" href="/static/react/css/index.css">
+    <link rel="stylesheet" href="/static/react/css/settings.css">
+    <script src="/static/react/js/vendor.js"></script>
+    <script src="/static/react/js/settings.js"></script>
+    <script src="/static/react/js/index.js"></script>
+    <script>require('settings/initialize');</script>
+
+
+    <div id="header"></div>
 </head>
 
 <body>
