--- a/react_app/assets/book.html
+++ b/react_app/assets/book.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width">
     <title>Mine</title>
     <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
+    <link rel="stylesheet" href="/static/react/css/index.css">
     <link rel="stylesheet" href="/static/react/css/book.css">
     <script src="/static/react/js/vendor.js"></script>
     <script src="/static/react/js/book.js"></script>
+    <script src="/static/react/js/index.js"></script>
     <script>require('book/initialize');</script>
+
+    <div id="header"></div>
 </head>
 
 <body>
