--- a/react_app/assets/explore.html
+++ b/react_app/assets/explore.html
@@ -10,10 +10,14 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
+    <link rel="stylesheet" href="/static/react/css/index.css">
     <link rel="stylesheet" href="/static/react/css/explore.css">
     <script src="/static/react/js/vendor.js"></script>
     <script src="/static/react/js/explore.js"></script>
+    <script src="/static/react/js/index.js"></script>
     <script>require('explore/initialize');</script>
+
+    <div id="header"></div>
 
     <style>
         .footer p {
