--- a/react_app/assets/friends.html
+++ b/react_app/assets/friends.html
@@ -4,10 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Friends</title>
+  <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
+  <link rel="stylesheet" href="/static/react/css/index.css">
   <link rel="stylesheet" href="/static/react/css/friends.css">
   <script src="/static/react/js/vendor.js"></script>
   <script src="/static/react/js/friends.js"></script>
+  <script src="/static/react/js/index.js"></script>
   <script>require('friends/initialize');</script>
+
+  <div id="header"></div>
 </head>
 
 <body>
