--- a/react_app/assets/friends.html
+++ b/react_app/assets/friends.html
@@ -11,13 +11,16 @@
   <script src="/static/react/js/friends.js"></script>
   <script src="/static/react/js/index.js"></script>
   <script>require('friends/initialize');</script>
-  <div id="header"></div>
 </head>
 
 
 <body style="background: #e9ecf3 ;">
 
 <header class="am-topbar am-topbar-fixed-top">
+    <div id="header"></div>
+</header>
+
+<!--header class="am-topbar am-topbar-fixed-top">
     <div class="am-container">
         <h1 class="am-topbar-brand">
             <a href="#">BookFlow</a>
@@ -135,14 +138,14 @@
 
                 <div class="am-topbar-right">
                     <button class="am-btn am-btn-primary am-topbar-btn am-btn-sm"><span class="am-icon-user"></span> 登录</button>
-                </div-->
+                </div>
             </div>
 
         </div>
 
     </div>
 
-</header>
+</header-->
 
 
 <div style="padding-left: 10%;padding-right: 10%;">
@@ -154,7 +157,7 @@
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
                     <li class="tpl-left-nav-item">
-                        <a href="index.html" class="nav-link active">
+                        <a href="index.html" class="nav-link">
                             <i class="am-icon-home"></i>
                             <span>兴趣爱好</span>
                         </a>
@@ -167,7 +170,7 @@
                         </a>
                     </li>
                     <li class="tpl-left-nav-item">
-                        <a href="login.html" class="nav-link tpl-left-nav-link-list">
+                        <a href="login.html" class="nav-link tpl-left-nav-link-list active">
                             <i class="am-icon-coffee"></i>
                             <span>朋友</span>
                         </a>
@@ -177,7 +180,7 @@
         </div>
 
 
-        <div class="tpl-content-wrapper">
+        <div class="tpl-content-wrapper-f">
 
             <div class="tpl-portlet-components">
                 <div class="portlet-title">
