--- a/react_app/assets/login.html
+++ b/react_app/assets/login.html
@@ -40,8 +40,12 @@
     </script-->
 </head>
 
-
 <body>
+
+<header class="am-topbar am-topbar-fixed-top">
+    <div id="header"></div>
+</header>
+
 
 <div class="am-g myapp-login">
     <div class="wrapper-page">
