--- a/react_app/assets/mine.html
+++ b/react_app/assets/mine.html
@@ -12,10 +12,14 @@
   <script src="/static/react/js/index.js"></script>
   <script>require('mine/initialize');</script>
 
-  <div id="header"></div>
 </head>
 
 <body>
+
+<header class="am-topbar am-topbar-fixed-top">
+  <div id="header"></div>
+</header>
+
 
 <div id="root"></div>
 
