--- a/react_app/assets/search.html
+++ b/react_app/assets/search.html
@@ -13,11 +13,10 @@
     <link rel="stylesheet" href="/static/react/css/index.css">
     <link rel="stylesheet" href="/static/react/css/search.css">
     <script src="/static/react/js/vendor.js"></script>
+    <script src="/static/react/js/search.js"></script>
     <script src="/static/react/js/index.js"></script>
     <script>require('search/initialize');</script>
     <link rel="alternate icon" type="image/png" href="assets/i/favicon.png">
-
-    <div id="header"></div>
 
     <style>
         .footer p {
@@ -33,6 +32,10 @@
 <body style="background: #e9ecf3 ;">
 
 <header class="am-topbar am-topbar-fixed-top">
+    <div id="header"></div>
+</header>
+
+<!--header class="am-topbar am-topbar-fixed-top">
     <div class="am-container">
         <h1 class="am-topbar-brand">
             <a href="#">BookFlow</a>
@@ -65,7 +68,7 @@
 
     </div>
 
-</header>
+</header-->
 
 
 <div style="padding-left: 10%;padding-right: 10%;">
