--- a/react_app/assets/book.html
+++ b/react_app/assets/book.html
@@ -12,10 +12,15 @@
     <script src="/static/react/js/index.js"></script>
     <script>require('book/initialize');</script>
 
-    <div id="header"></div>
 </head>
 
 <body>
+
+<header class="am-topbar am-topbar-fixed-top">
+    <div id="header"></div>
+</header>
+
+
 <div id="root"></div>
 
 </body>
