--- a/react_app/assets/explore.html
+++ b/react_app/assets/explore.html
@@ -17,8 +17,6 @@
     <script src="/static/react/js/index.js"></script>
     <script>require('explore/initialize');</script>
 
-    <div id="header"></div>
-
     <style>
         .footer p {
             color: #7f8c8d;
@@ -33,6 +31,11 @@
 <body style="background: #e9ecf3 ;">
 
 <header class="am-topbar am-topbar-fixed-top">
+    <div id="header"></div>
+</header>
+
+
+<!--header class="am-topbar am-topbar-fixed-top">
     <div class="am-container">
         <h1 class="am-topbar-brand">
             <a href="#">BookFlow</a>
@@ -65,7 +68,7 @@
 
     </div>
 
-</header>
+</header-->
 
 
 <div style="padding-left: 10%;padding-right: 10%;">
