--- a/react_app/assets/personal.html
+++ b/react_app/assets/personal.html
@@ -18,8 +18,6 @@
     <script>require('personal/initialize');</script>
     <link rel="alternate icon" type="image/png" href="assets/i/favicon.png">
 
-    <div id="header"></div>
-
     <style>
         .footer p {
             color: #7f8c8d;
@@ -33,6 +31,11 @@
 
 
 <body style="background: #e9ecf3 ;">
+
+<header class="am-topbar am-topbar-fixed-top">
+    <div id="header"></div>
+</header>
+
 
 <header class="am-topbar am-topbar-fixed-top">
     <div class="am-container">
@@ -191,7 +194,7 @@
 
 
 
-        <div class="tpl-content-wrapper">
+        <div class="tpl-content-wrapper-p">
 
             <div class="tpl-portlet-components">
                 <div class="portlet-title">
