--- a/react_app/assets/settings.html
+++ b/react_app/assets/settings.html
@@ -12,11 +12,14 @@
     <script src="/static/react/js/index.js"></script>
     <script>require('settings/initialize');</script>
 
-
-    <div id="header"></div>
 </head>
 
 <body>
+
+<header class="am-topbar am-topbar-fixed-top">
+    <div id="header"></div>
+</header>
+
 
 <div id="root"></div>
 
