--- a/react_app/assets/settings.html
+++ b/react_app/assets/settings.html
@@ -21,7 +21,57 @@
 </header>
 
 
-<div id="root"></div>
+<div style="padding-left: 10%;padding-right: 10%;">
+    <div class="tpl-page-container tpl-page-header-fixed">
+        <div class="tpl-left-nav tpl-left-nav-hover">
+            <div class="tpl-left-nav-title">
+                个人主页列表
+            </div>
+            <div class="tpl-left-nav-list">
+                <ul class="tpl-left-nav-menu">
+                    <li class="tpl-left-nav-item">
+                        <a href="index.html" class="nav-link">
+                            <i class="am-icon-home"></i>
+                            <span>兴趣爱好</span>
+                        </a>
+                    </li>
+
+                    <li class="tpl-left-nav-item">
+                        <a href="login.html" class="nav-link tpl-left-nav-link-list">
+                            <i class="am-icon-key"></i>
+                            <span>个人资料</span>
+                        </a>
+                    </li>
+                    <li class="tpl-left-nav-item">
+                        <a href="login.html" class="nav-link tpl-left-nav-link-list active">
+                            <i class="am-icon-coffee"></i>
+                            <span>朋友</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="tpl-content-wrapper-f">
+            <div class="tpl-portlet-components">
+                <div class="portlet-title">
+                    <div class="caption font-green bold">
+                        兴趣选择
+                    </div>
+                </div>
+
+                <div id="root"></div>
+            </div>
+        </div>
+
+
+    </div>
+</div>
+
+
+
+
 
 </body>
 
