--- a/react_app/assets/mine.html
+++ b/react_app/assets/mine.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Mine</title>
-  <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
-  <link rel="stylesheet" href="/static/react/css/index.css">
-  <link rel="stylesheet" href="/static/react/css/mine.css">
-  <script src="/static/react/js/vendor.js"></script>
-  <script src="/static/react/js/mine.js"></script>
-  <script src="/static/react/js/index.js"></script>
-  <script>require('mine/initialize');</script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Mine</title>
+    <link rel="stylesheet" href="/static/react/css/amazeui.min.css"/>
+    <link rel="stylesheet" href="/static/react/css/index.css">
+    <link rel="stylesheet" href="/static/react/css/mine.css">
+    <script src="/static/react/js/vendor.js"></script>
+    <script src="/static/react/js/mine.js"></script>
+    <script src="/static/react/js/index.js"></script>
+    <script>require('mine/initialize');</script>
 
 </head>
 
-<body>
+<body style="background: #e9ecf3 ;">
 
 <header class="am-topbar am-topbar-fixed-top">
-  <div id="header"></div>
+    <div id="header"></div>
 </header>
 
 
-<div id="root"></div>
+<div style="padding-left: 10%;padding-right: 10%;">
+    <div class="tpl-page-container tpl-page-header-fixed">
+
+        <div class="tpl-content-wrapper-f">
+            <div class="tpl-portlet-components">
+                <div id="root"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 </body>
 
