--- a/react_app/assets/search.html
+++ b/react_app/assets/search.html
@@ -66,11 +66,12 @@
 
 
         <div class="tpl-content-wrapper">
-            <div id="root"></div>
+
             <div class="tpl-portlet-components">
-                <div class="portlet-title">
+                <div id="root"></div>
+                <!--div class="portlet-title">
                     <div class="caption font-green bold">
-                        根据您的搜索结果"XXX": 16条
+                        搜索结果
                     </div>
                 </div>
 
@@ -84,15 +85,16 @@
                         <h3 class="am-list-item-hd am_list_title">
                             <a href="###" class="">书单标题</a>
                         </h3>
-                        <div class="am_list_author"><a href="javascript:void(0)"><span class="am_list_author_ico"
-                                                                                       style="background-image: url(/static/assets/i/user02.png);"></span><span
-                                class="name">Okaeri</span></a>
+                        <div class="am_list_author">
+                            <a href="###">
+                                <span class="name">作者: XXX  </span>
+                            </a>
                         </div>
                         <div class="am-list-item-text am_list_item_text ">
                             秋田犬是非常受欢迎的犬种之一，但是在饲养过程中可能会遇到一些难题。也许其他方面自己的爱犬都能配合，就是喂食的时候它表现出狗护食的欲望，让你无法接近。
                         </div>
                     </div>
-                </div>
+                </div-->
 
             </div>
 
