--- a/react_app/assets/friends.html
+++ b/react_app/assets/friends.html
@@ -29,20 +29,20 @@
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
                     <li class="tpl-left-nav-item">
-                        <a href="index.html" class="nav-link">
+                        <a href="###" class="nav-link">
                             <i class="am-icon-home"></i>
                             <span>兴趣爱好</span>
                         </a>
                     </li>
 
                     <li class="tpl-left-nav-item">
-                        <a href="login.html" class="nav-link tpl-left-nav-link-list">
+                        <a href="/settings" class="nav-link tpl-left-nav-link-list">
                             <i class="am-icon-key"></i>
                             <span>个人资料</span>
                         </a>
                     </li>
                     <li class="tpl-left-nav-item">
-                        <a href="login.html" class="nav-link tpl-left-nav-link-list active">
+                        <a href="/friends" class="nav-link tpl-left-nav-link-list active">
                             <i class="am-icon-coffee"></i>
                             <span>朋友</span>
                         </a>
