--- a/react_app/assets/settings.html
+++ b/react_app/assets/settings.html
@@ -37,13 +37,13 @@
                     </li>
 
                     <li class="tpl-left-nav-item">
-                        <a href="login.html" class="nav-link tpl-left-nav-link-list active">
+                        <a href="/settings" class="nav-link tpl-left-nav-link-list active">
                             <i class="am-icon-key"></i>
                             <span>个人资料</span>
                         </a>
                     </li>
                     <li class="tpl-left-nav-item">
-                        <a href="login.html" class="nav-link tpl-left-nav-link-list">
+                        <a href="/friends" class="nav-link tpl-left-nav-link-list">
                             <i class="am-icon-coffee"></i>
                             <span>朋友</span>
                         </a>
