--- a/react_app/assets/personal.html
+++ b/react_app/assets/personal.html
@@ -82,30 +82,21 @@
                                     <div class="am-u-sm-4 am-u-md-2 am-text-right">类型</div>
                                     <div class="am-u-sm-8 am-u-md-10">
                                         <div id="root"></div>
+                                        <!--div className="am-btn-group" data-am-button>
+                                            <label class="am-btn am-btn-default am-btn-xs">
+                                                <input type="checkbox">兴趣
+                                            </label>
+                                        </div-->
                                     </div>
-
                                 </div>
+
+
+
                                 <div class="am-form-group">
                                     <div class="am-u-sm-9 am-u-sm-push-3">
-                                        <button type="button" class="am-btn am-btn-primary">保存修改</button>
+                                        <button type="submit" class="am-btn am-btn-primary">保存修改</button>
                                     </div>
                                 </div>
-                                <!--div class="am-form-group">
-                                    <label for="user-name" class="am-u-sm-3 am-form-label">标题 <span class="tpl-form-line-small-title">Title</span></label>
-                                    <div class="am-u-sm-9">
-                                        <input type="text" class="tpl-form-input" id="user-name" placeholder="请输入标题文字">
-                                        <small>请填写标题文字10-20字左右。</small>
-                                    </div>
-                                </div-->
-
-                                <!--div class="am-form-group">
-                                    <label for="user-email" class="am-u-sm-3 am-form-label">发布时间 <span class="tpl-form-line-small-title">Time</span></label>
-                                    <div class="am-u-sm-9">
-                                        <input type="text" class="am-form-field tpl-form-no-bg" placeholder="发布时间" data-am-datepicker="" readonly/>
-                                        <small>发布时间为必填</small>
-                                    </div>
-                                </div-->
-
                             </form>
 
                         </div>
