--- a/react_app/assets/personal.html
+++ b/react_app/assets/personal.html
@@ -77,16 +77,13 @@
 
                     <div class="am-g">
                         <div class="tpl-form-body tpl-form-line">
-                            <form class="am-form tpl-form-line-form">
+                            <div id="root"></div>
+                            <!--form class="am-form tpl-form-line-form">
                                 <div class="am-form-group">
                                     <div class="am-u-sm-4 am-u-md-2 am-text-right">类型</div>
                                     <div class="am-u-sm-8 am-u-md-10">
-                                        <div id="root"></div>
-                                        <!--div className="am-btn-group" data-am-button>
-                                            <label class="am-btn am-btn-default am-btn-xs">
-                                                <input type="checkbox">兴趣
-                                            </label>
-                                        </div-->
+
+
                                     </div>
                                 </div>
 
@@ -97,7 +94,7 @@
                                         <button type="submit" class="am-btn am-btn-primary">保存修改</button>
                                     </div>
                                 </div>
-                            </form>
+                            </form-->
 
                         </div>
                     </div>
