--- a/react_app/assets/friends.html
+++ b/react_app/assets/friends.html
@@ -29,7 +29,7 @@
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
                     <li class="tpl-left-nav-item">
-                        <a href="###" class="nav-link">
+                        <a href="/interest" class="nav-link">
                             <i class="am-icon-home"></i>
                             <span>兴趣爱好</span>
                         </a>
