--- a/react_app/assets/personal.html
+++ b/react_app/assets/personal.html
@@ -45,23 +45,27 @@
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
                     <li class="tpl-left-nav-item">
-                        <a href="index.html" class="nav-link active">
+                        <a href="/interest" class="nav-link">
                             <i class="am-icon-home"></i>
                             <span>兴趣爱好</span>
                         </a>
                     </li>
 
                     <li class="tpl-left-nav-item">
-                        <a href="login.html" class="nav-link tpl-left-nav-link-list">
+                        <a href="/settings" class="nav-link tpl-left-nav-link-list">
                             <i class="am-icon-key"></i>
                             <span>个人资料</span>
-
+                        </a>
+                    </li>
+                    <li class="tpl-left-nav-item">
+                        <a href="/friends" class="nav-link tpl-left-nav-link-list active">
+                            <i class="am-icon-coffee"></i>
+                            <span>朋友</span>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-
 
 
         <div class="tpl-content-wrapper-p">
@@ -102,8 +106,6 @@
             </div>
 
         </div>
-
-
 
 
     </div>
