--- a/react_app/assets/personal.html
+++ b/react_app/assets/personal.html
@@ -45,7 +45,7 @@
             <div class="tpl-left-nav-list">
                 <ul class="tpl-left-nav-menu">
                     <li class="tpl-left-nav-item">
-                        <a href="/interest" class="nav-link">
+                        <a href="/interest" class="nav-link active">
                             <i class="am-icon-home"></i>
                             <span>兴趣爱好</span>
                         </a>
@@ -58,7 +58,7 @@
                         </a>
                     </li>
                     <li class="tpl-left-nav-item">
-                        <a href="/friends" class="nav-link tpl-left-nav-link-list active">
+                        <a href="/friends" class="nav-link tpl-left-nav-link-list">
                             <i class="am-icon-coffee"></i>
                             <span>朋友</span>
                         </a>
